--- a/css/main.css
+++ b/css/main.css
@@ -25,3 +25,38 @@ This is how people make it so you can't copy and paste things */
     color: white;
     user-select: none;
 }
+
+/* Cursor shows the user you can interact with. */
+.kanban__item-input{
+    padding: 10px 15px;
+    box-sizing: border-box;
+    background: white;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+/* Area that appears when you drag an item into a colum. Visual indicator for the user. */
+/* Transition helps makes the niffty animation, without javascript. */
+.kanban__dropzone{
+    height: 20px;
+    transition: background 0.15s;
+    height: .15s;
+
+}
+
+.kanban__dropzone--active{
+    height: 40px;
+    background: rgba(0,0,0,0.25);
+}
+
+/* Our add item button. Removing some defaults and adding our own. */
+.kanban__add-item{
+    width: 100%;
+    padding: 10px 0;
+    font-size: 16px;
+    color: white;
+    background: rgba(0,0,0,0.1);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
